--- a/HongMouer.CloudPlatform/appsettings.json
+++ b/HongMouer.CloudPlatform/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProviderName": "System.Data.OracleClient",
+    
+  },
+  "IsRecordSql": true,
+  "urls": "http://*:40088"
 }
