--- a/HongMouer.CloudPlatform/HongMouer.CloudPlatform.csproj
+++ b/HongMouer.CloudPlatform/HongMouer.CloudPlatform.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,11 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="HongMouer.Common" Version="2020.8.20.2326" />
-    <PackageReference Include="HongMouer.DataAnnotations" Version="2020.8.20.2326" />
-    <PackageReference Include="HongMouer.EHR.Models" Version="2020.8.20.2326" />
-    <PackageReference Include="HongMouer.EntityRelationalCore" Version="2020.8.19.2033" />
-    <PackageReference Include="HongMouer.RestClient" Version="2020.8.20.2326" />
+    <PackageReference Include="HongMouer.Common" Version="2020.8.24.107" />
+    <PackageReference Include="HongMouer.DataAnnotations" Version="2020.8.24.107" />
+    <PackageReference Include="HongMouer.EHR.Models" Version="2020.8.24.107" />
+    <PackageReference Include="HongMouer.EntityRelationalCore" Version="2020.8.25.48" />
+    <PackageReference Include="HongMouer.RestClient" Version="2020.8.24.107" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.1.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
