--- a/HongMouer.CloudPlatform/appsettings.json
+++ b/HongMouer.CloudPlatform/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProviderName": "System.Data.OracleClient",
-    
+    "HongMouerConnection": ""
   },
   "IsRecordSql": true,
   "urls": "http://*:40088"
